<resources>
    <string name="app_name">Mirante</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_post">NewPostActivity</string>
    <string name="title_activity_new_channel">NewChannelActivity</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- Login -->
    <string name="login_instructions">Se você já possui conta, faça seu login</string>
    <string name="login_name_hint">Nome</string>
    <string name="login_user_hint">E-mail</string>
    <string name="login_password_hint">Senha</string>
    <string name="login_show_login_fields_button">Login</string>
    <string name="login_create_account_button">Criar minha conta</string>
    <string name="login_submit_button">Entrar</string>
    <string name="login_skip_account_button">Acessar sem logar</string>
    <string name="new_account_instructions">Crie sua conta com apenas três dados</string>
    <string name="new_account_save_button">Salvar</string>
    <string name="title_activity_new_account">NewAccountActivity</string>
    <string name="title_activity_feed">FeedActivity</string>

    <!-- Home Activity -->
    <string name="channels_list_dialog_title">Escolha comunidade</string>
    <string name="message_need_to_choose_a_channel">Por favor, escolha uma comunidade</string>
    <string name="title_activity_post_detail">PostDetail</string>

</resources>
