<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.mirante.views.activities.HomeActivity"
    tools:showIn="@layout/activity_home">

    <LinearLayout
        android:id="@+id/loginContainer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_instructions"
            android:id="@+id/textView" />

        <android.support.design.widget.TextInputLayout
            android:layout_below="@+id/textView"
            android:id="@+id/userContainer"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_user_hint"
                android:id="@+id/user" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_below="@id/userContainer"
            android:id="@+id/passwordContainer"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_hint"
                android:id="@+id/password"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_marginTop="@dimen/app_margin_default_double"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_create_account_button"
            android:id="@+id/createAccountButton" />

        <Button
            android:layout_marginTop="@dimen/app_margin_default_double"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_skip_account_button"
            android:id="@+id/skipAccountCreation" />



    </LinearLayout>


</LinearLayout>
