<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.mirante.views.activities.NewAccountActivity"
    tools:showIn="@layout/activity_new_account">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_account_instructions"
            android:id="@+id/textView" />


        <LinearLayout
            android:id="@+id/createAccountContainer"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/newNameContainer"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_name_hint"
                    android:id="@+id/newName" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/newUserContainer"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_user_hint"
                    android:inputType="textEmailAddress"
                    android:id="@+id/newUser" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/newPasswordContainer"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password_hint"
                    android:id="@+id/newPassword"
                    android:inputType="textPassword" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:layout_marginTop="@dimen/app_margin_default_double"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_account_save_button"
            android:id="@+id/saveNewAccount" />

    </LinearLayout>




</RelativeLayout>
